# plotnine-guide

./: .gitignore  README.md  _quarto.yml  _quarto_internal_scss_error.scss  index.qmd  justfile  objects.txt  package-lock.json  package.json  plotnine.scss  pyproject.toml  requirements.txt  styles.css  tailwind.config.js
.github/workflows/: main.yml
demo/: demo.html  demo.qmd  demo.scss
gallery/: anscombes-quartet.qmd  anscombes-quartet.quarto_ipynb
guide/: _metadata.yml  _sidebar.yml  _styles.scss  aesthetic-mappings.qmd  aesthetic-mappings.quarto_ipynb  aesthetic-specification.qmd  aesthetic-specification.quarto_ipynb  annotations.qmd  case-study1.qmd  case-study2.qmd  case-study3.qmd  coordinate-systems.qmd  coordinate-systems.quarto_ipynb  export.qmd  export.quarto_ipynb  facets.qmd  facets.quarto_ipynb  feature-coverage.qmd  geom-cheatsheet.qmd  geometric-objects.qmd  geometric-objects.quarto_ipynb  install.qmd  intro.qmd  intro.quarto_ipynb  introduction.qmd  labels.qmd  labels.quarto_ipynb  maps.qmd  maps.quarto_ipynb  misc.qmd  operators.qmd  overview.qmd  overview.quarto_ipynb  plot-composition.qmd  position-adjustments.qmd  position-adjustments.quarto_ipynb  scale-basics.qmd  scale-basics.quarto_ipynb  scale-breaks-labels.qmd  scale-color-fill.qmd  (+11 more)
homepage/: footer.html  header.html  homepage-bs.css  homepage-syntax.css  homepage.min.css  input.css  intro.html
homepage/banner/: items.yaml  output.html  template.jinja
homepage/features/: items.yaml  output.html  template.jinja
homepage/features/code/: adjust.py  auto.py  facet.py  final.py  layer.py  (+2 more)
(+8 files in other folders)
